--- a/src/app/components/main/main/main.component.html
+++ b/src/app/components/main/main/main.component.html
@@ -1,3 +1,5 @@
-<p>main works!</p>
+<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-success text-white border-bottom shadow-sm">
+    <h5 class="my-0 mr-md-auto dont-weight-normal">Main</h5>    
+</div>
 
 <button (click)="refresh()">refresh</button>
