--- a/src/app/pages/main/main-page/main-page.component.html
+++ b/src/app/pages/main/main-page/main-page.component.html
@@ -1,1 +1,12 @@
+<span *ngIf="tokenData.value else login">
+    <app-main-header 
+    [childPermission]="[permission.getInfo, permission.getChild]"
+    [parentPermission]="[permission.getInfo, permission.getChild, permission.getParent, permission.crudGenus]"
+    [adminPermission]="[permission.getInfo, permission.getChild, permission.getParent, permission.crudGenus, permission.removeUser]" 
+    [godPermission]="[permission.getInfo, permission.getChild, permission.getParent, permission.crudGenus, permission.removeUser, permission.userToAdmin, permission.adminToUser]"></app-main-header>
+</span>
 <app-main></app-main>
+
+<ng-template #login>
+    <app-auth-header></app-auth-header>
+</ng-template>
