--- a/src/app/pages/user/profile-page/profile-page.component.html
+++ b/src/app/pages/user/profile-page/profile-page.component.html
@@ -1,1 +1,7 @@
-<p>profile-page works!</p>
+<app-main-header 
+    [childPermission]="[permission.getInfo, permission.getChild]"
+    [parentPermission]="[permission.getInfo, permission.getChild, permission.getParent, permission.crudGenus]"
+    [adminPermission]="[permission.getInfo, permission.getChild, permission.getParent, permission.crudGenus, permission.removeUser]" 
+    [godPermission]="[permission.getInfo, permission.getChild, permission.getParent, permission.crudGenus, permission.removeUser, permission.userToAdmin, permission.adminToUser]">
+</app-main-header>
+<app-profile></app-profile>
