--- a/src/app/components/headers/main-header/main-header.component.html
+++ b/src/app/components/headers/main-header/main-header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light p-3 mb-3" style="background-color: #563d7c;">
+<nav class="navbar navbar-expand-lg navbar-light p-3" style="background-color: #563d7c;">
     <div class="container-fluid">
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
