profile was fixed

--- a/src/app/components/headers/main-header/main-header.component.html
+++ b/src/app/components/headers/main-header/main-header.component.html
@@ -6,7 +6,7 @@
           <li class="nav-item" *ngIf="hasChildPermission"><strong><a class="nav-link text-light me-5" aria-current="page" href="/children">Children</a></strong></li>
           <li class="nav-item" *ngIf="hasParentPermission"><strong><a class="nav-link text-light me-5" aria-current="page" href="/parents">Parents</a></strong></li>
           <li class="nav-item" *ngIf="hasParentPermission"><strong><a class="nav-link text-light me-5" aria-current="page" href="/genus">Genus</a></strong></li>
-          <li class="nav-item" *ngIf="hasAdminPermission"><strong><a class="nav-link text-light me-5" aria-current="page" href="/removeuser">RemoveUser</a></strong></li>
+          <li class="nav-item" *ngIf="hasAdminPermission"><strong><a class="nav-link text-light me-5" aria-current="page" href="/deleteuser">DeleteUser</a></strong></li>
           <li class="nav-item" *ngIf="hasGodPermission"><strong><a class="nav-link text-light me-5" aria-current="page" href="/usertoadmin">UserToAdmin</a></strong></li>
           <li class="nav-item" *ngIf="hasGodPermission"><strong><a class="nav-link text-light me-5" aria-current="page" href="/admintouser">AdminToUser</a></strong></li>
         </ul>
