--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -1,23 +1,33 @@
-<div *ngIf="user$ | async as user" class="wrapper p-3">    
-    <div class="from_all_details">
-        <p class="text">{{user.firstName}} {{user.lastName}}</p>
-        <p class="text">{{user.birthDay | date:'dd-MM-yyyy'}}</p>
-        <p class="text">{{user.gender.type}}</p>
-    </div>
-    <div *ngIf="this.user$.value.child else parent">
-        <div *ngIf="this.user$.value.child != null" class="wrapper2">
+<div *ngIf="user$ | async as user" class="main p-3"> 
+    <div *ngIf="this.user$.value.child else parent">   
+        <div class="from_all_details">
+            <p class="text">{{user.firstName}} 
+                <span *ngIf="user.child != null">
+                    {{user.child.genus.name}}
+                </span>            
+                <span *ngIf="user.parent != null">
+                    {{user.parent.genus.name}}
+                </span>
+            </p>
+            <p class="text">{{user.birthDay | date:'dd-MM-yyyy'}}</p>
+            <p class="text">Child</p>
+            <p class="text">{{user.gender.type}}</p>
+        </div>    
+        <div *ngIf="this.user$.value.child != null" class="wrapper">
             <div *ngFor="let item of user.child.genus.parents">
                 <div class="from_all_click">                
-                    <p class="text">{{item.user.firstName}} {{item.user.lastName}}</p>
+                    <p class="text">{{item.user.firstName}} {{user.child.genus.name}}</p>
                     <p class="text">{{item.user.birthDay | date:'dd-MM-yyyy'}}</p>
                     <p class="text">Parent</p>
+                    <p class="text">{{item.user.gender.type}}</p>
                 </div>
             </div>   
             <div *ngFor="let item of user.child.genus.children">
                 <div class="from_all_click">                
-                    <p class="text">{{item.user.firstName}} {{item.user.lastName}}</p>
+                    <p class="text">{{item.user.firstName}} {{user.child.genus.name}}</p>
                     <p class="text">{{item.user.birthDay | date:'dd-MM-yyyy'}}</p>
                     <p class="text">Child</p>
+                    <p class="text">{{item.user.gender.type}}</p>
                 </div>
             </div>   
         </div>       
@@ -25,19 +35,34 @@
      
     <ng-template #parent>
         <div>
-            <div *ngIf="this.user$.value.parent != null" class="wrapper2">
+            <div class="from_all_details">
+                <p class="text">{{user.firstName}} 
+                    <span *ngIf="user.child != null">
+                        {{user.child.genus.name}}
+                    </span>            
+                    <span *ngIf="user.parent != null">
+                        {{user.parent.genus.name}}
+                    </span>
+                </p>
+                <p class="text">{{user.birthDay | date:'dd-MM-yyyy'}}</p>
+                <p class="text">Parent</p>
+                <p class="text">{{user.gender.type}}</p>
+            </div>
+            <div *ngIf="this.user$.value.parent != null" class="wrapper">
                 <div *ngFor="let item of user.parent.genus.parents">
                     <div class="from_all_click">                    
-                        <p class="text">{{item.user.firstName}} {{item.user.lastName}}</p>
+                        <p class="text">{{item.user.firstName}} {{user.parent.genus.name}}</p>
                         <p class="text">{{item.user.birthDay | date:'dd-MM-yyyy'}}</p>
                         <p class="text">Parent</p>
+                        <p class="text">{{item.user.gender.type}}</p>
                     </div>
                 </div>  
                 <div *ngFor="let item of user.parent.genus.children">
                     <div class="from_all_click">                    
-                        <p class="text">{{item.user.firstName}} {{item.user.lastName}}</p>
+                        <p class="text">{{item.user.firstName}} {{user.parent.genus.name}}</p>
                         <p class="text">{{item.user.birthDay | date:'dd-MM-yyyy'}}</p>
                         <p class="text">Child</p>
+                        <p class="text">{{item.user.gender.type}}</p>
                     </div>
                 </div> 
             </div>             
