--- a/src/app/components/user/profile/profile.component.scss
+++ b/src/app/components/user/profile/profile.component.scss
@@ -1,14 +1,11 @@
-.wrapper {
+.main {
     min-height: 100vh;
     background-image: url("/assets/LA_night.jpg");
     background-size: 100%;
     z-index: 2;
     background-repeat: no-repeat;
-    display: flex;
-    flex-wrap: wrap;
-    align-content: flex-start;
 }
-.wrapper2{
+.wrapper{
     display: flex;
     flex-wrap: wrap;
     align-content: flex-start;
@@ -17,12 +14,15 @@
 .from_all_details {
     border: 3px solid rgb(80, 200, 230);
     width: 250px;
+    min-height: 300px;
     color: rgb(80, 200, 230);
     border-radius: 15px;
     text-align: center;
     font-size: 20px;
     padding: 10px;
     margin: 10px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .from_all_click {
