all child, parent, genus is done

--- a/src/app/components/web/child/child/child.component.html
+++ b/src/app/components/web/child/child/child.component.html
@@ -1,1 +1,11 @@
-<p>child works!</p>
+<div class="main p-3">
+    <div class="wrapper">
+        <div *ngFor="let item of (children$ | async)"> 
+            <div class="from_all_click" *ngIf="item != null" (click)="details(item.id)">                
+                <p class="text">{{item.user.firstName}} {{item.genus.name}}</p>
+                <p class="text">{{item.user.birthDay | date:'dd-MM-yyyy'}}</p>
+                <p class="text">{{item.user.gender.type}}</p>
+            </div>
+        </div>
+    </div>    
+</div>
