--- a/src/app/pages/web/child/child-page/child-page.component.html
+++ b/src/app/pages/web/child/child-page/child-page.component.html
@@ -1,1 +1,8 @@
-<p>child-page works!</p>
+<app-main-header 
+    [childPermission]="[permission.getChild]"
+    [parentPermission]="[permission.getParent, permission.getGenus]"
+    [adminPermission]="[permission.deleteUser]" 
+    [godPermission]="[permission.userToAdmin, permission.adminToUser]">
+</app-main-header>
+<app-child></app-child>
+
