--- a/src/app/pages/web/genus/genus-page/genus-page.component.html
+++ b/src/app/pages/web/genus/genus-page/genus-page.component.html
@@ -1,1 +1,7 @@
-<p>genus-page works!</p>
+<app-main-header 
+    [childPermission]="[permission.getChild]"
+    [parentPermission]="[permission.getParent, permission.getGenus]"
+    [adminPermission]="[permission.deleteUser]" 
+    [godPermission]="[permission.userToAdmin, permission.adminToUser]">
+</app-main-header>
+<app-genus></app-genus>
