--- a/src/app/components/user/profile/profile.component.scss
+++ b/src/app/components/user/profile/profile.component.scss
@@ -40,3 +40,12 @@
 .text{
     color: rgb(80, 200, 230);
 }
+
+.back{
+    width: 100px;
+    height: 50px;
+    color: rgb(80, 200, 230);
+    background: none;
+    border: 3px solid rgb(80, 200, 230);
+    border-radius: 15px;
+}
