--- a/src/app/pages/web/child/child-id-page/child-id-page.component.html
+++ b/src/app/pages/web/child/child-id-page/child-id-page.component.html
@@ -1,1 +1,8 @@
-<p>child-id-page works!</p>
+<app-main-header 
+    [childPermission]="[permission.getChild]"
+    [parentPermission]="[permission.getParent, permission.getGenus]"
+    [adminPermission]="[permission.deleteUser]" 
+    [godPermission]="[permission.userToAdmin, permission.adminToUser]">
+</app-main-header>
+<app-child-id></app-child-id>
+
