--- a/src/app/components/main/main/main.component.html
+++ b/src/app/components/main/main/main.component.html
@@ -1,3 +1,7 @@
-<div class="wrapper p-3">
-    <p style="color: rgb(80, 200, 230);">Main</p>
-</div>
+<div class="main p-3">
+    <div>   
+        <div class="from_all_details">
+            <span class="text">Welcome user!</span>
+        </div> 
+    </div>
+</div> 
