--- a/src/app/components/main/main/main.component.scss
+++ b/src/app/components/main/main/main.component.scss
@@ -1,10 +1,25 @@
-.wrapper {
+.main {
     min-height: 100vh;
     background-image: url("/assets/LA_night.jpg");
     background-size: 100%;
     z-index: 2;
     background-repeat: no-repeat;
-    display: flex;
-    flex-wrap: wrap;
-    align-content: flex-start;
+}
+
+.from_all_details {
+    border: 3px solid rgb(80, 200, 230);
+    width: 520px;
+    color: rgb(80, 200, 230);
+    border-radius: 15px;
+    text-align: center;
+    font-size: 20px;
+    padding: 10px;
+    margin: 10px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.text {
+    color: rgb(80, 200, 230);
+    font-weight: bold;
 }
