--- a/src/app/components/web/child/child-id/child-id.component.html
+++ b/src/app/components/web/child/child-id/child-id.component.html
@@ -1,1 +1,30 @@
-<p>child-id works!</p>
+<div *ngIf="child$ | async as child" class="main p-3">
+    <a routerLink="/children"><button class="back">Back</button></a>
+    <div>   
+        <div class="from_all_details">
+            <p class="text">{{child.user.firstName}} {{child.genus.name}}</p>
+            <p class="text">{{child.user.birthDay | date:'dd-MM-yyyy'}}</p>
+            <p class="text">Child</p>
+            <p class="text">{{child.user.gender.type}}</p>
+        </div>    
+        <div class="wrapper">
+            <div *ngFor="let item of child.genus.parents">
+                <div class="from_all_click" *ngIf="item != null">                
+                    <p class="text">{{item.user.firstName}} {{child.genus.name}}</p>
+                    <p class="text">{{item.user.birthDay | date:'dd-MM-yyyy'}}</p>
+                    <p class="text">Parent</p>
+                    <p class="text">{{item.user.gender.type}}</p>
+                </div>
+            </div>   
+            <div *ngFor="let item of child.genus.children">
+                <div class="from_all_click" *ngIf="item != null">                
+                    <p class="text">{{item.user.firstName}} {{child.genus.name}}</p>
+                    <p class="text">{{item.user.birthDay | date:'dd-MM-yyyy'}}</p>
+                    <p class="text">Child</p>
+                    <p class="text">{{item.user.gender.type}}</p>
+                </div>
+            </div>   
+        </div>       
+    </div>
+</div>
+
