--- a/src/app/components/web/parent/parent-id/parent-id.component.html
+++ b/src/app/components/web/parent/parent-id/parent-id.component.html
@@ -1,1 +1,30 @@
-<p>parent-id works!</p>
+<div *ngIf="parent$ | async as parent" class="main p-3">
+    <a routerLink="/parents"><button class="back">Back</button></a>
+    <div>   
+        <div class="from_all_details">
+            <p class="text">{{parent.user.firstName}} {{parent.genus.name}}</p>
+            <p class="text">{{parent.user.birthDay | date:'dd-MM-yyyy'}}</p>
+            <p class="text">Parent</p>
+            <p class="text">{{parent.user.gender.type}}</p>
+        </div>    
+        <div class="wrapper">
+            <div *ngFor="let item of parent.genus.parents">
+                <div class="from_all_click" *ngIf="item != null">                
+                    <p class="text">{{item.user.firstName}} {{parent.genus.name}}</p>
+                    <p class="text">{{item.user.birthDay | date:'dd-MM-yyyy'}}</p>
+                    <p class="text">Parent</p>
+                    <p class="text">{{item.user.gender.type}}</p>
+                </div>
+            </div>   
+            <div *ngFor="let item of parent.genus.children">
+                <div class="from_all_click" *ngIf="item != null">                
+                    <p class="text">{{item.user.firstName}} {{parent.genus.name}}</p>
+                    <p class="text">{{item.user.birthDay | date:'dd-MM-yyyy'}}</p>
+                    <p class="text">Child</p>
+                    <p class="text">{{item.user.gender.type}}</p>
+                </div>
+            </div>   
+        </div>       
+    </div>
+</div>
+
