--- a/src/app/pages/web/genus/genus-id-page/genus-id-page.component.html
+++ b/src/app/pages/web/genus/genus-id-page/genus-id-page.component.html
@@ -1,1 +1,7 @@
-<p>genus-id-page works!</p>
+<app-main-header 
+    [childPermission]="[permission.getChild]"
+    [parentPermission]="[permission.getParent, permission.getGenus]"
+    [adminPermission]="[permission.deleteUser]" 
+    [godPermission]="[permission.userToAdmin, permission.adminToUser]">
+</app-main-header>
+<app-genus-id></app-genus-id>
