--- a/src/app/pages/web/parent/parent-id-page/parent-id-page.component.html
+++ b/src/app/pages/web/parent/parent-id-page/parent-id-page.component.html
@@ -1,1 +1,7 @@
-<p>parent-id-page works!</p>
+<app-main-header 
+    [childPermission]="[permission.getChild]"
+    [parentPermission]="[permission.getParent, permission.getGenus]"
+    [adminPermission]="[permission.deleteUser]" 
+    [godPermission]="[permission.userToAdmin, permission.adminToUser]">
+</app-main-header>
+<app-parent-id></app-parent-id>
