--- a/src/app/components/main/main/main.component.html
+++ b/src/app/components/main/main/main.component.html
@@ -1,7 +1,8 @@
 <div class="main p-3">
-    <div>   
+    <div *ngIf="hasPermissions">   
         <div class="from_all_details">
             <span class="text">Welcome user!</span>
+            <a routerLink="/genus/add"><button class="create">Create Genus</button></a>
         </div> 
     </div>
 </div> 
