--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -1,6 +1,11 @@
 <div *ngIf="user$ | async as user" class="main p-3"> 
-    <a routerLink="/"><button class="back">Back</button></a>
-    <div *ngIf="this.user$.value.child else parent">   
+    <div class="wrapper">
+        <a routerLink="/"><button class="button">Back</button></a>
+        <a routerLink="/profile/edit"><button class="button">Change Info</button></a>
+        <a routerLink="/profile/edit/password"><button class="button">Change Password</button></a>
+        <button class="button" *ngIf="user.child != null || user.parent != null">Leave Genus</button>
+    </div>
+    <div *ngIf="this.user$.value.parent else child">
         <div class="from_all_details">
             <p class="text">{{user.firstName}} 
                 <span *ngIf="user.child != null">
@@ -10,32 +15,31 @@
                     {{user.parent.genus.name}}
                 </span>
             </p>
-            <p class="text">{{user.birthDay | date:'dd-MM-yyyy'}}</p>
-            <p class="text">Child</p>
+            <p class="text">{{user.birthDay | date:'dd.MM.yyyy'}}</p>
+            <p class="text">Parent</p>
             <p class="text">{{user.gender.type}}</p>
-        </div>    
-        <div *ngIf="this.user$.value.child != null" class="wrapper">
-            <div *ngFor="let item of user.child.genus.parents">
-                <div class="from_all_click" *ngIf="item != null">                
-                    <p class="text">{{item.user.firstName}} {{user.child.genus.name}}</p>
-                    <p class="text">{{item.user.birthDay | date:'dd-MM-yyyy'}}</p>
+        </div>
+        <div *ngIf="this.user$.value.parent != null" class="wrapper">
+            <div *ngFor="let item of user.parent.genus.parents">
+                <div class="from_all_click" *ngIf="item != null">                    
+                    <p class="text">{{item.user.firstName}} {{user.parent.genus.name}}</p>
+                    <p class="text">{{item.user.birthDay | date:'dd.MM.yyyy'}}</p>
                     <p class="text">Parent</p>
                     <p class="text">{{item.user.gender.type}}</p>
                 </div>
-            </div>   
-            <div *ngFor="let item of user.child.genus.children">
-                <div class="from_all_click" *ngIf="item != null">                
-                    <p class="text">{{item.user.firstName}} {{user.child.genus.name}}</p>
-                    <p class="text">{{item.user.birthDay | date:'dd-MM-yyyy'}}</p>
+            </div>  
+            <div *ngFor="let item of user.parent.genus.children">
+                <div class="from_all_click" *ngIf="item != null">                    
+                    <p class="text">{{item.user.firstName}} {{user.parent.genus.name}}</p>
+                    <p class="text">{{item.user.birthDay | date:'dd.MM.yyyy'}}</p>
                     <p class="text">Child</p>
                     <p class="text">{{item.user.gender.type}}</p>
                 </div>
-            </div>   
-        </div>       
+            </div> 
+        </div>             
     </div>
-     
-    <ng-template #parent>
-        <div>
+    <ng-template #child>
+        <div *ngIf="this.user$.value.child else noone">   
             <div class="from_all_details">
                 <p class="text">{{user.firstName}} 
                     <span *ngIf="user.child != null">
@@ -45,29 +49,38 @@
                         {{user.parent.genus.name}}
                     </span>
                 </p>
-                <p class="text">{{user.birthDay | date:'dd-MM-yyyy'}}</p>
-                <p class="text">Parent</p>
+                <p class="text">{{user.birthDay | date:'dd.MM.yyyy'}}</p>
+                <p class="text">Child</p>
                 <p class="text">{{user.gender.type}}</p>
-            </div>
-            <div *ngIf="this.user$.value.parent != null" class="wrapper">
-                <div *ngFor="let item of user.parent.genus.parents">
-                    <div class="from_all_click" *ngIf="item != null">                    
-                        <p class="text">{{item.user.firstName}} {{user.parent.genus.name}}</p>
-                        <p class="text">{{item.user.birthDay | date:'dd-MM-yyyy'}}</p>
+            </div>    
+            <div *ngIf="this.user$.value.child != null" class="wrapper">
+                <div *ngFor="let item of user.child.genus.parents">
+                    <div class="from_all_click" *ngIf="item != null">                
+                        <p class="text">{{item.user.firstName}} {{user.child.genus.name}}</p>
+                        <p class="text">{{item.user.birthDay | date:'dd.MM.yyyy'}}</p>
                         <p class="text">Parent</p>
                         <p class="text">{{item.user.gender.type}}</p>
                     </div>
-                </div>  
-                <div *ngFor="let item of user.parent.genus.children">
-                    <div class="from_all_click" *ngIf="item != null">                    
-                        <p class="text">{{item.user.firstName}} {{user.parent.genus.name}}</p>
-                        <p class="text">{{item.user.birthDay | date:'dd-MM-yyyy'}}</p>
+                </div>   
+                <div *ngFor="let item of user.child.genus.children">
+                    <div class="from_all_click" *ngIf="item != null">                
+                        <p class="text">{{item.user.firstName}} {{user.child.genus.name}}</p>
+                        <p class="text">{{item.user.birthDay | date:'dd.MM.yyyy'}}</p>
                         <p class="text">Child</p>
                         <p class="text">{{item.user.gender.type}}</p>
                     </div>
-                </div> 
-            </div>             
-        </div>       
+                </div>   
+            </div>       
+        </div>
+    </ng-template>
+    <ng-template #noone>
+        <div>
+            <div class="from_all_details">
+                <p class="text">{{user.firstName}}</p>
+                <p class="text">{{user.birthDay | date:'dd.MM.yyyy'}}</p>
+                <p class="text">{{user.gender.type}}</p>
+            </div>
+        </div>        
     </ng-template>
 </div>
 
