leave from family is done

--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -3,7 +3,7 @@
         <a routerLink="/"><button class="button">Back</button></a>
         <a routerLink="/profile/edit"><button class="button">Change Info</button></a>
         <a routerLink="/profile/edit/password"><button class="button">Change Password</button></a>
-        <button class="button" *ngIf="user.child != null || user.parent != null">Leave Genus</button>
+        <button class="button" *ngIf="user.child != null || user.parent != null" (click)="leave()">Leave Genus</button>
     </div>
     <div *ngIf="this.user$.value.parent else child">
         <div class="from_all_details">
