--- a/src/app/components/user/delete-user/delete-user.component.html
+++ b/src/app/components/user/delete-user/delete-user.component.html
@@ -1,1 +1,29 @@
-<p>delete-user works!</p>
+<div class="main p-3">
+    <a routerLink="/"><button class="button">Back</button></a>
+    <div>
+        <form #form="ngForm" (ngSubmit)="filter()">
+            <input [(ngModel)] = 'email' name='email' type="email" placeholder="email"/>
+            <button type='submit' class="ml-2 btn btn-success">Filter</button>
+            <button (click)="reset()" class="ml-2 btn btn-danger">Reset</button>
+        </form>
+    </div>
+    <br />
+    <table class="table table-striped">
+        <thead>
+            <tr scope="col">
+                <td><strong>Name</strong></td>
+                <td><strong>Email</strong></td>
+                <td><strong>Remove</strong></td>
+            </tr>
+        </thead>
+        <tbody *ngFor="let user of (users$ | async)" >            
+            <tr scope="row">
+                <td>{{user.firstName}}</td>
+                <td>{{user.email}}</td>
+                <td>
+                    <button (click)="removeUser(user.id)" class="btn btn-danger but">Remove</button>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
