--- a/src/app/pages/user/delete-user-page/delete-user-page.component.html
+++ b/src/app/pages/user/delete-user-page/delete-user-page.component.html
@@ -1,1 +1,7 @@
-<p>delete-user-page works!</p>
+<app-main-header 
+    [childPermission]="[permission.getChild]"
+    [parentPermission]="[permission.getParent, permission.getGenus]"
+    [adminPermission]="[permission.deleteUser]" 
+    [godPermission]="[permission.userToAdmin, permission.adminToUser]">
+</app-main-header>
+<app-delete-user></app-delete-user>
