--- a/src/app/components/user/admin-to-user/admin-to-user.component.html
+++ b/src/app/components/user/admin-to-user/admin-to-user.component.html
@@ -1,1 +1,33 @@
-<p>admin-to-user works!</p>
+<div class="main p-3">
+    <a routerLink="/"><button class="button mb-2">Back</button></a>
+    <div>
+        <form #form="ngForm" (ngSubmit)="filter()">
+            <input [(ngModel)] = 'email' name='email' type="email" placeholder="Email" class="input space"/>
+            <button type='submit' class="button2 space">Filter</button>
+            <button (click)="reset()" class="button2 space">Reset</button>
+        </form>
+    </div>
+    <br />
+    <table class="table table-bordered">
+        <thead>
+            <tr scope="col">
+                <td><strong>Name</strong></td>
+                <td><strong>Email</strong></td>
+                <td><strong>Gender</strong></td>
+                <td><strong>BirthDay</strong></td>
+                <td><strong>To User</strong></td>
+            </tr>
+        </thead>
+        <tbody *ngFor="let admin of (admins$ | async)" >            
+            <tr scope="row">
+                <td>{{admin.firstName}}</td>
+                <td>{{admin.email}}</td>
+                <td>{{admin.gender.type}}</td>
+                <td>{{admin.birthDay | date:'dd.MM.yyyy'}}</td>
+                <td>
+                    <button (click)="adminToUser(admin.id)" class="button2">To User</button>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
