--- a/src/app/pages/user/admin-to-user-page/admin-to-user-page.component.html
+++ b/src/app/pages/user/admin-to-user-page/admin-to-user-page.component.html
@@ -1,1 +1,7 @@
-<p>admin-to-user-page works!</p>
+<app-main-header 
+    [childPermission]="[permission.getChild]"
+    [parentPermission]="[permission.getParent, permission.getGenus]"
+    [adminPermission]="[permission.deleteUser]" 
+    [godPermission]="[permission.userToAdmin, permission.adminToUser]">
+</app-main-header>
+<app-admin-to-user></app-admin-to-user>
