--- a/src/app/pages/user/change-info-page/change-info-page.component.html
+++ b/src/app/pages/user/change-info-page/change-info-page.component.html
@@ -1,1 +1,7 @@
-<p>change-info-page works!</p>
+<app-main-header 
+    [childPermission]="[permission.getChild]"
+    [parentPermission]="[permission.getParent, permission.getGenus]"
+    [adminPermission]="[permission.deleteUser]" 
+    [godPermission]="[permission.userToAdmin, permission.adminToUser]">
+</app-main-header>
+<app-change-info></app-change-info>
