Update info is done

--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="user$ | async as user" class="main p-3"> 
     <div class="wrapper">
         <a routerLink="/"><button class="button">Back</button></a>
-        <a routerLink="/profile/edit"><button class="button">Change Info</button></a>
+        <a routerLink="/profile/update"><button class="button">Update Info</button></a>
         <a routerLink="/profile/password"><button class="button">Change Password</button></a>
         <button class="button" *ngIf="user.child != null || user.parent != null" (click)="leave()">Leave Genus</button>
     </div>
