--- a/src/app/components/user/delete-user/delete-user.component.scss
+++ b/src/app/components/user/delete-user/delete-user.component.scss
@@ -32,6 +32,7 @@
     border-left: none;
     border-right: none;
     border-bottom-color: rgb(80, 200, 230);
+    border-width: 2px;
 }
 
 .input::placeholder{
