Update info is done

--- a/src/app/components/user/change-password/change-password.component.html
+++ b/src/app/components/user/change-password/change-password.component.html
@@ -1,1 +1,11 @@
-<p>change-password works!</p>
+<div class="main p-3">
+    <a routerLink="/profile"><button class="button mb-2">Back</button></a>
+    <div>
+        <form #form="ngForm" (ngSubmit)="submit(form)">
+            <input [(ngModel)] = 'password.oldPassword' name='oldPassword' type="password" placeholder="OldPassword" class="form-control input"/><br />
+            <input [(ngModel)] = 'password.newPassword' name='newPassword' type="password" placeholder="NewPassword" class="form-control input"/><br />
+            <input [(ngModel)] = 'password.confirmPassword' name='confirmPassword' type="password" placeholder="ConfirmPassword" class="form-control input"/><br />
+            <button type='submit' class="form-control button2">Change</button><br />
+        </form>
+    </div>
+</div>
